--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,43 @@
 <resources>
     <string name="app_name">Team Tracker</string>
+    <string name="loading">Loading…</string>
+    <string name="signed_in">Signed In</string>
+    <string name="signed_out">Signed Out</string>
+    <string name="desc_firebase_lockup">Firebase logo and name</string>
+    <string name="firebase_status_fmt">Firebase User: %s</string>
+    <string name="status_code_sent">Code Sent</string>
+    <string name="status_verification_failed">Verification failed</string>
+    <string name="status_verification_succeeded">Verification succeeded</string>
+    <string name="status_sign_in_failed">Sign-in failed</string>
+    <string name="instant_validation">instant validation</string>
+    <string name="phone_title_text">Phone Number</string>
+    <string name="hint_phone_number">Phone Number</string>
+    <string name="hint_verification_code">Verification Code</string>
+    <string name="start_phone_auth">Start</string>
+    <string name="verify_phone_auth">Verify</string>
+    <string name="resend_phone_auth">Resend</string>
+    <string name="sign_out">Sign Out</string>
+    <string name="passwordless_title_text">Passwordless Sign In</string>
+    <string name="passwordless_status_fmt">Passwordless Login</string>
+    <string name="hint_email">Email</string>
+    <string name="send_link">Send Link</string>
+    <string name="sign_in">Sign In</string>
+    <string name="status_email_not_sent">Email not send</string>
+    <string name="status_email_sent">Email send</string>
+    <string name="status_link_found">Link Not Found</string>
+    <string name="heatmap">Detected Cases in Area</string>
+    <string name="hospital">Nearest Hospital</string>
+    <string name="plant_disease_detection">Plant Disease Detection</string>
+    <string name="chatbot">Chatbot</string>
+    <string name="home_remedies">Home Remedies</string>
+    <string name="input_text">Looking for…</string>
+    <string name="news_water">News</string>
+    <string name="input">Donate Your Info</string>
+    <string name="is_safe">Is Place Safe</string>
+    <string name="voice">Emotion Sensor</string>
+    <string name="news">Relaxing Songs</string>
+    <string name="weather">Chatbot</string>
+    <string name="forum">Games</string>
+    <string name="buy">Mind Refreshing Memes</string>
+
 </resources>
